--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -3,3 +3,4 @@
 * decrease threshold, so that detection is done on a longer distance.
 * add IR-on vs. IR-off for background light substraction.
 * fix hw to use PWM for liting up and fading out LEDs.
+* make external power via mini-USB, so that PC-communication can be made + uniwersal power charges can be used.
